--- a/ormconfig.json
+++ b/ormconfig.json
@@ -4,7 +4,7 @@
     "port": 3306,
     "username": "root",
     "password": "root",
-    "database": "note",
+    "database": "cookbook",
     "synchronize": true,
     "logging": false,
     "entities": [
